--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -13,3 +13,8 @@ html, body{
 *{
 	font-family: 'Open Sans' sans-serif;
 }
+
+.card{
+	background: linear-gradient(180deg, #101113 0%, rgba(16, 17, 19, 0) 100%);
+	border-radius: 17px;
+}
