--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -2,59 +2,83 @@
 @tailwind components;
 @tailwind utilities;
 @mixin noselect {
-	-webkit-touch-callout: none; /* iOS Safari */
-	-webkit-user-select: none; /* Safari */
-	-khtml-user-select: none; /* Konqueror HTML */
-	-moz-user-select: none; /* Old versions of Firefox */
-	-ms-user-select: none; /* Internet Explorer/Edge */
-	user-select: none; /* Non-prefixed version, currently
+  -webkit-touch-callout: none; /* iOS Safari */
+  -webkit-user-select: none; /* Safari */
+  -khtml-user-select: none; /* Konqueror HTML */
+  -moz-user-select: none; /* Old versions of Firefox */
+  -ms-user-select: none; /* Internet Explorer/Edge */
+  user-select: none; /* Non-prefixed version, currently
                                   supported by Chrome, Opera and Firefox */
 }
 body::-webkit-scrollbar {
-	width: 15px; 
+  width: 15px;
 }
 body::-webkit-scrollbar-track {
-	background: #000; 
+  background: #000;
 }
 body::-webkit-scrollbar-thumb {
-	background: linear-gradient(180deg, #85888e 0%, rgba(39, 41, 44, 0.5) 100%);
-	
-	border-radius: 4px; 
-	border: 2px solid #000;
+  background: linear-gradient(
+    180deg,
+    #85888e 0%,
+    rgba(39, 41, 44, 0.5) 100%
+  );
 
+  border-radius: 4px;
+  border: 2px solid #000;
 }
-div{
-	@include noselect;
-}
-
-.scroll{
-	&::-webkit-scrollbar {
-	width: 10px; 
-}
-&::-webkit-scrollbar-track {
-	background: #000; 
-}
-&::-webkit-scrollbar-thumb {
-	background-color: #fff; 
-	border-radius: 4px; 
-	border: 2px solid #000;
+div {
+  @include noselect;
 }
 
+.scroll {
+  &::-webkit-scrollbar {
+    width: 10px;
+  }
+  &::-webkit-scrollbar-track {
+    background: #000;
+  }
+  &::-webkit-scrollbar-thumb {
+    background-color: #fff;
+    border-radius: 4px;
+    border: 2px solid #000;
+  }
 }
 
-body{
-	background-color: black;
-	
+body {
+  background-color: black;
 }
-html, body{
+html,
+body {
   height: 100%;
 }
 
-*{
-	font-family: 'Open Sans' sans-serif;
+* {
+  font-family: 'Open Sans' sans-serif;
 }
 
-.card{
-	background: linear-gradient(180deg, #101113 0%, rgba(16, 17, 19, 0) 100%);
-	border-radius: 17px;
+.card {
+  background: linear-gradient(
+    180deg,
+    #101113 0%,
+    rgba(16, 17, 19, 0) 100%
+  );
+  border-radius: 17px;
+}
+
+.aboutCard {
+  background: linear-gradient(
+    270deg,
+    #101113 0%,
+    rgba(16, 17, 19, 0) 100%
+  );
+  border-radius: 17px;
+}
+
+.reverseAboutCard {
+  background: linear-gradient(
+    -270deg,
+    #101113 0%,
+    rgba(16, 17, 19, 0) 100%
+  );
+  border-radius: 17px;
 }
