--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -186,7 +186,7 @@ body {
 	background: #2980b9; /* fallback for old browsers */
 
   	border: double 2px transparent;
-	background-image: linear-gradient(#ffffff,
+	background-image: linear-gradient(to top, #ffffff,
 		#6dd5fa,
 		#2980b9),
 		radial-gradient(circle at top, #ffffff,
@@ -205,6 +205,22 @@ body {
 	border: double 2px transparent;
 	background-image: linear-gradient(#f953c6, #000),
 		radial-gradient(circle at top, #d953c6, #000);
+	background-origin: border-box;
+	background-clip: padding-box, border-box;
+}
+
+.bg-gad {
+	background: #0f2027; /* fallback for old browsers */
+	background: #0f2027; /* fallback for old browsers */
+	background: -webkit-linear-gradient(
+		to bottom top,
+		#2c5364,
+		#203a43,
+		#0f2027
+	); /* Chrome 10-25, Safari 5.1-6 */
+	border: double 2px transparent;
+	background-image: linear-gradient(#2c5364, #203a43, #0f2027),
+		radial-gradient(circle at top, #2c5364, #000);
 	background-origin: border-box;
 	background-clip: padding-box, border-box;
 }
