--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -120,15 +120,14 @@ div {
 
 .scroll {
   &::-webkit-scrollbar {
-    width: 10px;
+    width: 5px;
   }
   &::-webkit-scrollbar-track {
-    background: #000;
+    background: transparent;
   }
   &::-webkit-scrollbar-thumb {
     background-color: #fff;
     border-radius: 4px;
-    border: 2px solid #000;
   }
 }
 
@@ -188,19 +187,18 @@ body {
   background: -webkit-linear-gradient(
     to bottom top,
     #2c5364,
-    #203a43,
     #0f2027
   ); /* Chrome 10-25, Safari 5.1-6 */
   border: double 2px transparent;
   background-image: linear-gradient(
       #2c5364,
-      #203a43,
-      #0f2027
+      
+      #000
     ),
     radial-gradient(
       circle at top,
       #2c5364,
-      #203a43,
+      
       #000
     );
   background-origin: border-box;
@@ -213,14 +211,12 @@ body {
   border: double 2px transparent;
   background-image: linear-gradient(
       to top,
-      #ffffff,
-      #6dd5fa,
+      #000,
       #2980b9
     ),
     radial-gradient(
       circle at top,
-      #ffffff,
-      #6dd5fa,
+      #2980b9,
       #000
     );
   background-origin: border-box;
