--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -91,7 +91,7 @@ h6 {
 @mixin noselect {
   -webkit-touch-callout: none; /* iOS Safari */
   -webkit-user-select: none; /* Safari */
-  -khtml-user-select: none; /* Konqueror HTML */
+  -khtml-user-select: none;
   -moz-user-select: none; /* Old versions of Firefox */
   -ms-user-select: none; /* Internet Explorer/Edge */
   user-select: none; /* Non-prefixed version, currently
@@ -120,7 +120,8 @@ div {
 
 .scroll {
   &::-webkit-scrollbar {
-    width: 5px;
+    width: 10px;
+    height: 10px;
   }
   &::-webkit-scrollbar-track {
     background: transparent;
@@ -137,6 +138,11 @@ body {
 html,
 body {
   height: 100%;
+  overflow:hidden !important;
+}
+canvas{
+  overflow: hidden;
+  max-width: 100vw;
 }
 
 * {
@@ -206,8 +212,6 @@ body {
 }
 
 .bg-sky {
-  background: #2980b9; /* fallback for old browsers */
-
   border: double 2px transparent;
   background-image: linear-gradient(
       to top,
